--- a/scripts/script_capitulo_1.yaml
+++ b/scripts/script_capitulo_1.yaml
@@ -1,89 +1,96 @@
 inicio:
   capitulo1:
-    linhas:
-      lin_01: "Era um dia claro e frio de abril e os relógios marcavam treze horas."
-      lin_02: "Winston Smith, com queixo aninhado no peito em um esforço para escapar do "
-      lin_03: "vento insuportável, passou rapidamente pelas portas de vidro das Mansões "
-      lin_04: "Vitória, embora não rápido o suficiene para evitar que um redemoinho de "
-      lin_05: "poeira entrasse junto com ele. O corredor cheirava a repolho cozido e tape-"
-      lin_06: "tes velhos de trapos. Em uma das extremidades, um poster colorido, grande "
-      lin_07: "demais para ser exibido em ambientes internos, havia sido pregado na parede."
-      lin_08: "Retratava simplesmente um rosto enorme, com mais de um metro de largura: o "
-      lin_09: "rosto de um homem de cerca de quarenta e cinco anos, com um bigode preto "
-      lin_10: "pesado e traços robustos e bonitos. Era um daqueles retratos feitos de tal "
-      lin_11: "modo que os olhos seguem as pessoas quando elas se movem."
-      lin_12: "Abaixo do quadro havia uma legenda:"
-      lin_13: "Dentro do apartamento, uma voz agradável lia uma lista de números que "
-      lin_14: "tinham algo a ver com a produção de ferro-gusa. A voz vinha de uma placa "
-      lin_15: "metálica oblonga como um espelho fosco que formava parte da superfície da "
-      lin_16: "parede do lado direito. O instrumento (a teletela, como se chamava) podia "
-      lin_17: "ser regulado, mas não havia como desligá-lo complemente. Aproximou-se da "
-      lin_18: "janela: uma figura miúda e frágil, a magreza de seu corpo realçada pelo ma-"
-      lin_19: "cacão azul que era o uniforme do Partido. Seu cabelo era muito claro, seu"
-      lin_20: "rosto naturalmente otimista, sua pele áspera por sabão grosso e lâminas de "
-      lin_21: "barbear sem e o frio de inverno que acabara de terminar."
-      lin_22: "No nível da rua, outro cartaz, rasgado em um canto, balançava irregularmente"
-      lin_23: "ao vento, cobrindo e descobrindo alternadamente a única palavra: Socing."
-      lin_24: "Ao longe, um helicóptero desceu entre os telhados, pairou por um instante "
-      lin_25: "como uma libélula e disparou novamente com um voo curto. Era a Patrulha da "
-      lin_26: "Polícia, bisbilhotando as janelas das pessoas. As patrulhas não importavam, "
-      lin_27: "no entanto. Apenas a Polícia do Pensamento importava."
-      lin_28: "A teletela atrás de Winston recebia e transmitia simultaneamente. Qualquer "
-      lin_29: "som produzido acima de um sussurro muito baixo, seria captado pelo aparelho"
-      lin_30: "; além disso, enquanto permanecesse dentro do campo de visão que a placa de"
-      lin_31: "metal ordenava, ele poderia ser visto e ouvido. É claro que não havia como "
-      lin_32: "saber se você estava sendo observado em dado momento, com que frequência ou"
-      lin_33: "em qual sistema, já que a Policia do Pensamento se conectava a qualquer fio"
-      lin_34: "individual. Eles poderiam conectar seu fio sempre que quisessem. Você tinha"
-      lin_35: "que viver -  e vivia em decorrência do hábito transformado em instinto - a-"
-      lin_36: "creditando que todo som que fizesse seria ouvido e, se a escuridão não fosse"
-      lin_37: "completa, todo movimento examinado meticulosamente."
-      lin_38: "A um quilômetro de distancia, o Ministério da Verdade, seu local de trabalho"
-      lin_39: ", erguia-se vasto e branco acima da paisagem encardida. Isso, pensou com uma"
-      lin_40: "espécie de desgosto vago, era Londres, a principal cidade da Pista de Pouso"
-      lin_41: "Um, a terceira mais populosa das províncias da Ocenia."
-      lin_42: "O Ministério da Verdade - Miniver, em Novilíngua - era surpreendentemente"
-      lin_43: "diferente de qualquer outro objeto à vista. Era uma enorme estrutura pira-"
-      lin_44: "midal de concreto branco brilhantem subindo, terraço após terraço, trezen-"
-      lin_45: "tos metros no ar. De onde Winston conseguia ler, em letras elegantes, os "
-      lin_46: "três lemas do Partido"
-      lin_47: "Espalhados pro Londres havia apenas três outros edifícios de aparência e "
-      lin_48: "e tamanho semelhantes. Do telhado das Mansões Vitória você podia ver todos"
-      lin_49: "os quatro simultaneamente. Eram as casas dos quatro Ministérios, entre os"
-      lin_50: "quais se dividia todo o aparato de governo: Ministério da Verdade, que se"
-      lin_51: "ocupava das notícias, entretenimento, educação e belas artes; O Ministério"
-      lin_52: "da Paz, que se preocupava com a guerra; o Ministério do Amor, que mantinha"
-      lin_53: "a lei e a ordem; e o Ministério da Abundância, que era responssável pelos"
-      lin_54: "assuntos econômicos. Seus nomes, em Novilíngua: Miniver, MiniPaz Miniamor"
-      lin_55: "e Minifartura."
-
-    eventos:
-      - texto: "Ler a legenda →"
-        acao:
-          tipo: "ler_legenda"
-          proximo: "lin_13"
-
-      - texto: "Explicar Novilíngua →"
-        acao:
-          tipo: "explicar_novilingua"
-          proximo: "lin_43"
-
-      - texto: "Etimologia e estrutura do idioma →"
-        acao:
-          tipo: "estudar_idioma"
-          proximo: "lin_43"
-
-      - texto: "Exibir Lemas →"
-        acao:
-          tipo: "exibir_lemas"
-          proximo: "lin_47"
-
-    explicacoes:
-      ler_legenda: "O Grande Irmão está vigiando em você!"
-      explicar_novilingua:
-        - "Idioma fictício criado pelo governo autoritário, de George Orwell."
-        - "A novilíngua era desenvolvida não pela criação de novas palavras, mas pela"
-        - "condensação ou remoção delas ou de alguns sentidos, com o objetivo de res-"
-        - "tringir o escopo do pensamento."
-      estudar_idioma: "Preencher aqui ou buscar em outro arquivo os detalhes do idioma"
-      exibir_lemas: "GUERRA É PAZ. LIBERDADE É ESCRAVIDÃO. IGNORÂNCIA É FORÇA"
+    lin_01: "    Era um dia claro e frio de abril e os relógios marcavam treze horas."
+    lin_02: "Winston Smith, com queixo aninhado no peito em um esforço para escapar do "
+    lin_03: "vento insuportável, passou rapidamente pelas portas de vidro das Mansões "
+    lin_04: "Vitória, embora não rápido o suficiente para evitar que um redemoinho de "
+    lin_05: "poeira entrasse junto com ele. O corredor cheirava a repolho cozido e tape-"
+    lin_06: "tes velhos de trapos. Em uma das extremidades, um poster colorido, grande "
+    lin_07: "demais para ser exibido em ambientes internos, havia sido pregado na parede."
+    lin_08: "    Retratava simplesmente um rosto enorme, com mais de um metro de"
+    lin_09: "largura: o rosto de um homem de cerca de quarenta e cinco anos, com um"
+    lin_10: "bigode preto pesado e traços robustos e bonitos. Era um daqueles retratos "
+    lin_11: "feitos de tal modo que os olhos seguem as pessoas quando elas se movem."
+    lin_12:
+      texto: "Abaixo do quadro havia uma legenda:"
+      opcoes:
+        - texto: "Ler a legenda"
+          acao:
+            tipo: "ler"
+            destino: "ler_legenda"
+            proximo: "lin_13"
+            auto: "desenhar_poster"
+        - texto: "Ignorar legenda"
+          acao:
+            tipo: "pular"
+            proximo: "lin_13"
+    ler_legenda:
+      texto: "O Grande Irmão está vigiando em você!"
+    lin_13: "Dentro do apartamento, uma voz agradável lia uma lista de números que "
+    lin_14: "tinham algo a ver com a produção de ferro-gusa. A voz vinha de uma placa "
+    lin_15: "metálica oblonga como um espelho fosco que formava parte da superfície da "
+    lin_16: "parede do lado direito. O instrumento (a teletela, como se chamava) podia "
+    lin_17: "ser regulado, mas não havia como desligá-lo complemente. Aproximou-se da "
+    lin_18: "janela: uma figura miúda e frágil, a magreza de seu corpo realçada pelo ma-"
+    lin_19: "cacão azul que era o uniforme do Partido. Seu cabelo era muito claro, seu"
+    lin_20: "rosto naturalmente otimista, sua pele áspera por sabão grosso e lâminas de "
+    lin_21: "barbear sem e o frio de inverno que acabara de terminar."
+    lin_22: "No nível da rua, outro cartaz, rasgado em um canto, balançava irregularmente"
+    lin_23: "ao vento, cobrindo e descobrindo alternadamente a única palavra: Socing."
+    lin_24: "Ao longe, um helicóptero desceu entre os telhados, pairou por um instante "
+    lin_25: "como uma libélula e disparou novamente com um voo curto. Era a Patrulha da "
+    lin_26: "Polícia, bisbilhotando as janelas das pessoas. As patrulhas não importavam, "
+    lin_27: "no entanto. Apenas a Polícia do Pensamento importava."
+    lin_28: "A teletela atrás de Winston recebia e transmitia simultaneamente. Qualquer "
+    lin_29: "som produzido acima de um sussurro muito baixo, seria captado pelo aparelho"
+    lin_30: "; além disso, enquanto permanecesse dentro do campo de visão que a placa de"
+    lin_31: "metal ordenava, ele poderia ser visto e ouvido. É claro que não havia como "
+    lin_32: "saber se você estava sendo observado em dado momento, com que frequência ou"
+    lin_33: "em qual sistema, já que a Policia do Pensamento se conectava a qualquer fio"
+    lin_34: "individual. Eles poderiam conectar seu fio sempre que quisessem. Você tinha"
+    lin_35: "que viver -  e vivia em decorrência do hábito transformado em instinto - a-"
+    lin_36: "creditando que todo som que fizesse seria ouvido e, se a escuridão não fosse"
+    lin_37: "completa, todo movimento examinado meticulosamente."
+    lin_38: "A um quilômetro de distancia, o Ministério da Verdade, seu local de trabalho"
+    lin_39: ", erguia-se vasto e branco acima da paisagem encardida. Isso, pensou com uma"
+    lin_40: "espécie de desgosto vago, era Londres, a principal cidade da Pista de Pouso"
+    lin_41: "Um, a terceira mais populosa das províncias da Oceania."
+    lin_42:
+      texto: "O Ministério da Verdade - Miniver, em Novilíngua - era surpreendentemente."
+      opcoes:
+        - texto: "Explicar Novilíngua"
+          acao:
+            tipo: "explicar"
+            destino: "lin_43"
+            proximo: "lin_47"
+        - texto: "Desconsiderar explicação"
+          acao:
+            tipo: "pular"
+            proximo: "lin_47"
+    lin_43: "Idioma fictício criado pelo governo autoritário, de George Orwell."
+    lin_44: "A novilíngua era desenvolvida não pela criação de novas palavras, mas pela"
+    lin_45: "condensação ou remoção delas ou de alguns sentidos, com o objetivo de res-"
+    lin_46: "tringir o escopo do pensamento."
+    lin_47: "Era uma enorme estrutura piramidal de concreto branco brilhante, subindo, terraço após terraço, trezentos metros no ar."
+    lin_48:
+      texto: "Três lemas do Partido estavam visíveis."
+      opcoes:
+        - texto: "Exibir Lemas"
+          acao:
+            tipo: "exibir"
+            destino: "lin_49"
+            proximo: "lin_50"
+        - texto: "Ignorar Lemas"
+          acao:
+            tipo: "pular"
+            proximo: "lin_50"
+    lin_49: "GUERRA É PAZ. LIBERDADE É ESCRAVIDÃO. IGNORÂNCIA É FORÇA"
+    lin_50: "Espalhados por Londres havia apenas três outros edifícios de aparência e "
+    lin_51: "tamanho semelhantes. Do telhado das Mansões Vitória você podia ver todos"
+    lin_52: "os quatro simultaneamente. Eram as casas dos quatro Ministérios, entre os"
+    lin_53: "quais se dividia todo o aparato de governo: Ministério da Verdade, que se"
+    lin_54: "ocupava das notícias, entretenimento, educação e belas artes; O Ministério"
+    lin_55: "da Paz, que se preocupava com a guerra; o Ministério do Amor, que mantinha"
+    lin_56: "a lei e a ordem; e o Ministério da Abundância, que era responsável pelos"
+    lin_57: "assuntos econômicos. Seus nomes, em Novilíngua: Miniver, MiniPaz, Miniamor"
+    lin_58: "e Minifartura."
